# python4r

./: .gitattributes  .gitignore  README.md  START-HERE-Mac.command  START-HERE-Windows.bat  index.html  notebook_01_answers.ipynb  notebook_02.ipynb  notebook_02_answers.ipynb  pyproject.toml  python_r_cheatsheet.qmd
.ipynb_checkpoints/: notebook_01-checkpoint.ipynb
data/: econ.csv  egg_prices.csv
